# slint-esp32s3-example

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
ui/: app-window.slint  main-window.slint
