[package]
name = "slint-esp32s3-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.92"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-0"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"], optional = true }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"], optional = true }
esp-hal = { version = "~1.0", features = ["esp32s3"], optional = true }
esp-alloc = { version = "0.10.0", optional = true }
libc-print = "0.1.23"
bevy = { version = "0.18.1", default-features = false }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit"]
esp32s3 = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    "esp-hal",
    "esp-alloc",
    "esp-backtrace",
    "esp-println",
]