[package]
name = "slint-esp32s3-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.92"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-2", "renderer-software"] }
esp-println = { version = "0.17.0", features = ["esp32s3"], optional = true }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"], optional = true }
esp-hal = { version = "1.1.0", features = ["esp32s3", "unstable"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }
esp-alloc = { version = "0.10.0", optional = true }
bevy = { version = "0.18.1", default-features = false }
bevy_ecs = { version = "0.18.1", default-features = false }
bevy_platform = { version = "0.18.1", default-features = false }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"], optional = true }
display-interface = { version = "0.5.0", optional = true }
display-interface-parallel-gpio = { version = "0.7.0", optional = true }
mipidsi = { version = "0.10.0", optional = true }
embedded-graphics = { version = "0.8.2", optional = true }
embedded-graphics-core = { version = "0.4.1", optional = true }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[features]
simulator = [
    "slint/renderer-winit-software",
    "slint/backend-winit",
]
esp32s3 = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    "esp-bootloader-esp-idf",
    "esp-hal",
    "embedded-hal",
    "embedded-hal-bus",
    "esp-alloc",
    "esp-backtrace",
    "esp-println",
    "display-interface",
    "display-interface-parallel-gpio",
    "mipidsi",
    "embedded-graphics",
    "embedded-graphics-core"
]
display-interface-parallel-gpio = ["dep:display-interface-parallel-gpio"]
