[package]
name = "slint-esp32s3-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.92"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded", "libm"] }
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.1.0", features = ["esp32s3", "unstable"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = "0.10.0"
bevy = { version = "0.18.1", default-features = false }
bevy_ecs = { version = "0.18.1", default-features = false }
bevy_platform = { version = "0.18.1", default-features = false }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"]}
display-interface = "0.5.0" 
display-interface-parallel-gpio = "0.7.0"
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embedded-graphics-core = "0.4.1"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }